responsive css added

--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,11 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="./css/style.css" />
+    <link
+      rel="stylesheet"
+      media="screen and (max-width:768px)"
+      href="./css/mobile.css"
+    />
 
     <title>Hotel BT | Contact</title>
   </head>
@@ -55,17 +60,17 @@
     </section>
     <section id="contact-info" class="bg-dark">
       <div class="container">
-        <div class="box ">
+        <div class="box">
           <i class="fas fa-hotel fa-3x"></i>
           <h3>Location</h3>
           <p>50 Main st, Cape Town</p>
         </div>
-        <div class="box ">
+        <div class="box">
           <i class="fas fa-phone fa-3x"></i>
           <h3>Phone Number</h3>
           <p>(021) 123-4567</p>
         </div>
-        <div class="box ">
+        <div class="box">
           <i class="fas fa-envelope fa-3x"></i>
           <h3>Email Address</h3>
           <p>info@hct.co.za</p>
