--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     />
     <script src="https://kit.fontawesome.com/0b950e3e3c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" media="screen and (max-width:768px)" href="./css/mobile.css" />
 
-    <title>Hotel BT | Welcome</title>
+    <title>Hotel CT | Welcome</title>
   </head>
   <body>
     <header>
