--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
       <div class="container">
         <h1 class="l-heading"><span class="text-primary">Contact</span> Us</h1>
         <p>Please fill out form below to contact</p>
-        <form action="process.php">
+        <form action="process.php" method="POST">
           <div class="form-group">
             <label for="name">Name</label>
             <input type="text" name="name" id="name" />
